--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+.fa-bars, .fa-x {
+    display: none;
+}
+
 body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -50,10 +54,6 @@ a.active,a:hover {
     transition: .5s;
 }
 
-.fa-bars {
-    display: none;
-}
-
 @media (max-width:952px) {
     label.logo {
         font-size: 30px;
@@ -66,9 +66,21 @@ a.active,a:hover {
 }
 
 @media (max-width: 858px) {
+    nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .fa-x {
+        display: none;
+        color: white;
+        font-size: 30px;
+        padding: 25px 50px 0px 0px;
+
+    }
+    
     .fa-bars {
-        display: inline-block;
-        float: right;
+        display: block;
         color: white;
         font-size: 30px;
         padding: 25px 50px 0px 0px;
@@ -76,6 +88,10 @@ a.active,a:hover {
 
     .fa-bars:hover {
         cursor: pointer;
+    }
+
+    .menu {
+        display: none;
     }
 
     ul {
